--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -13,201 +13,31 @@
 
         <link href="../../assets/css/common.css" rel="stylesheet" />
 
-        <script src="../../assets/js/jquery.min.js"></script>
+        <script src="../../assets/jQuery/jquery-3.6.0.min.js"></script>
+        <script src="../../assets/jQuery-UI/jquery-ui.min.js"></script>
 
         <script src="../../assets/js/bootstrap.bundle.min.js"></script>
-        <script src="../../assets/js/jquery-ui.min.js"></script>
         <script src="../../assets/js/selectize.min.js"></script>
         <script src="../../assets/js/datatables.min.js"></script>
 
-        <script src="../../assets/js/request.js"></script>
+        <script src="../../assets/js/utility_functions.js"></script>
         <script src="../../assets/js/generators.js"></script>
-        <script src="../../assets/js/record_edit.js"></script>
         <script src="../../assets/js/append_img_request_state.js"></script>
         <script src="../../assets/js/queries.js"></script>
         <script>
-            function make_editable(element) {
-                $("#edit-popup").show();
-                $("#popup").removeClass();
-                $("#popup").addClass(element.attr("id"));
+            const table_headers_strings = {
+                STATO: "requestState",
+                PRODOTTO: "productCode",
+                DESCRIZIONE: "productName",
+                VARIANTE: "productFlavour",
+                NOTE: "notes",
+                "DATA RICHIESTA [dd/mm/yyyy]": "requestDate",
+                "DATA SCADENZA [dd/mm/yyyy]": "dueDate",
+            };
 
-                //For popup
-                const table_data_requester = new Requester(function (warehouseRequestsDetails) {
-                    //Get today data
-                    const now = new Date();
-                    const day = ("0" + now.getDate()).slice(-2);
-                    const month = ("0" + (now.getMonth() + 1)).slice(-2);
-                    const today = now.getFullYear() + "-" + month + "-" + day;
-                    const image_size = "40px";
-                    //Format dates
-                    let creationDate = warehouseRequestsDetails.results[0].requestDate.replace(" 00:00:00", "");
-                    creationDate = creationDate.split("-")[1] + "-" + creationDate.split("-")[2] + "-" + creationDate.split("-")[0];
-                    //Product Info
-                    var requestState = warehouseRequestsDetails.results[0].requestState;
-                    $("#prod_code").val(warehouseRequestsDetails.results[0].productCode);
-                    $("#prod_name").val(warehouseRequestsDetails.results[0].productName);
-                    $("#prod_variant").val(warehouseRequestsDetails.results[0].productFlavour);
-                    $("#notes").val(warehouseRequestsDetails.results[0].notes);
-                    $("#date_due").val(warehouseRequestsDetails.results[0].dueDate.split(" ")[0]).attr({
-                        min: today,
-                    });
-                    $("#date_creation").val(creationDate);
-                    //EXPECTED COUNT - Not going to be shown, needed for query
-                    previousExpectedCount = 0;
-                    const expected_count_requester = new Requester(function (warehouseExpectedCount) {
-                        previousExpectedCount = warehouseExpectedCount.results.N_TOT[0];
-                    });
-                    expected_count_requester.query({
-                        q_name: "warehouse_expected_count",
-                        q_data: {
-                            "f.productCode": warehouseRequestsDetails.results[0].productCode,
-                            "f.productFlavour": warehouseRequestsDetails.results[0].productFlavour,
-                            "f.currentYear": now.getFullYear(),
-                        },
-                    });
-                    //EXPECTED GROUND COUNT
-                    const expected_ground_count_requester = new Requester(function (expectedGroundCount) {
-                        const arrayOfGroundCount = expectedGroundCount.results.PRELEVATO;
-                        let sumOfGroundCount = arrayOfGroundCount ? arrayOfGroundCount.reduce((a, b) => Number(a) + Number(b), 0) : 0;
-                        if (arrayOfGroundCount) {
-                            $("#expected_ground_count").val(sumOfGroundCount);
-                        } else {
-                            $("#expected_ground_count").val(0);
-                        }
-                    });
-                    expected_ground_count_requester.query({
-                        q_name: "warehouse_expected_ground_count",
-                        q_data: {
-                            "d.lastYear": now.getFullYear() - 1,
-                            "d.currentYear": now.getFullYear(),
-                            "f.productCode": warehouseRequestsDetails.results[0].productCode,
-                            "f.productFlavour": warehouseRequestsDetails.results[0].productFlavour,
-                        },
-                    });
-                    //EXPECTED LOCATION
-                    const expected_location = new Requester(function (warehouseGetProductLocation) {
-                        if (
-                            !(
-                                warehouseGetProductLocation.results.ALTEZZA[0] ||
-                                warehouseGetProductLocation.results.CORRIDOIO[0] ||
-                                warehouseGetProductLocation.results.TRAVERSA[0] ||
-                                warehouseGetProductLocation.results.ZONA[0]
-                            )
-                        ) {
-                            $("#productLocation").text("Nessuna ubicazione standard");
-                        } else {
-                            $("#productLocation").text(
-                                `${warehouseGetProductLocation.results.ZONA[0]} ${warehouseGetProductLocation.results.CORRIDOIO[0]} ${warehouseGetProductLocation.results.TRAVERSA[0]} ${warehouseGetProductLocation.results.ALTEZZA[0]}`
-                            );
-                        }
-                    });
-                    expected_location.query({
-                        q_name: "warehouse_get_product_location",
-                        q_data: {
-                            "f.productCode": warehouseRequestsDetails.results[0].productCode,
-                            "f.productFlavour": warehouseRequestsDetails.results[0].productFlavour,
-                        },
-                    });
-
-                    //EXPECTED DYNAMIC LOCATIONS
-                    const expected_dynamic_location = new Requester(function (warehouseGetDynamicLocations) {
-                        const dynamic_locations_headers_strings = {
-                            MATERIAL: "mat",
-                            UBICAZIONE: "ubic",
-                            QUANTITÀ: "qta",
-                            LOTTO: "lotto",
-                            "TIPO UDM": "tipoudm",
-                        };
-                        $("#dynamic-locations-table-container").empty();
-                        $("#notFoundLocations").empty();
-                        if (warehouseGetDynamicLocations.results.length !== 0) {
-                            table_maker(warehouseGetDynamicLocations.results, "dynamic-locations-table-container", dynamic_locations_headers_strings);
-                        } else {
-                            $("#notFoundLocations").append("Nessuna posizione trovata");
-                        }
-                    });
-                    expected_dynamic_location.query({
-                        q_name: "warehouse_get_dynamic_locations",
-                        q_data: {
-                            "f.productCodeAndFlavour": warehouseRequestsDetails.results[0].productCode + " " + warehouseRequestsDetails.results[0].productFlavour,
-                        },
-                    });
-
-                    //Hide all buttons before selecting which to show counted_items
-                    $("#btn-count").hide();
-
-                    //RequestState
-                    $("#req_id").val(element.attr("id"));
-                    switch (warehouseRequestsDetails.results[0].requestState) {
-                        case "countRequest":
-                            append_img_request_state("request_state", "../../assets/images/countRequest.png", image_size, "Richiesto Conteggio");
-                            $("#btn-count").show();
-                            break;
-                        case "recountRequest":
-                            append_img_request_state("request_state", "../../assets/images/recountRequest.png", image_size, "Richiesta Riconta");
-                            $("#btn-count").show();
-                            break;
-                        default:
-                    }
-
-                    //Adding button event
-                    $("#btn-count").click((e) => {
-                        if ($.isNumeric($("#counted_items").val()) && $("#counted_items").val() > 0) {
-                            if (requestState == "countRequest") {
-                                warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "countRequest", previousExpectedCount);
-                                location.reload();
-                            } else if (requestState == "recountRequest") {
-                                warehouseCount($("#popup").attr("class"), $("#counted_items").val(), "recountRequest", previousExpectedCount);
-                                location.reload();
-                            }
-                        } else {
-                            alert("Non sono accettati campi vuoti o numeri negativi");
-                        }
-                    });
-                });
-                table_data_requester.query({
-                    q_name: "warehouse_requests_details",
-                    q_data: {
-                        "f.requestId": element.attr("id"),
-                    },
-                });
-            }
-
-            function register_clicks() {
-                $(".table-row").click(function (e) {
-                    make_editable($(this));
-                });
-
-                $("#edit-popup").click(function (e) {
-                    if (e.target === this) {
-                        $(this).hide();
-                    }
-                });
-
-                $(".exit-button").click(function (e) {
-                    if (e.target === this) {
-                        $("#edit-popup").hide();
-                    }
-                });
-            }
-
-            //Get table data
             $(document).ready(function () {
                 $("#edit-popup").hide();
-
-                const table_headers_strings = {
-                    STATO: "requestState",
-                    PRODOTTO: "productName",
-                    VARIANTE: "productFlavour",
-                    NOTE: "notes",
-                    "DATA RICHIESTA": "requestDate",
-                    "DATA SCADENZA": "dueDate",
-                };
-                const table_data_requester = new Requester((warehouseRequests) => {
-                    table_maker(warehouseRequests.results, "request-table-container", table_headers_strings);
-                    register_clicks();
-                });
-                table_data_requester.query({q_name: "warehouse_requests"});
+                warehouseRequests(table_headers_strings);
             });
         </script>
     </head>
@@ -245,7 +75,6 @@
                                                 type="text"
                                             />
                                         </div>
-                                        <span class="form-text text-muted" id="prod_codeHelpBlock">Codice assegnato al prodotto</span>
                                     </div>
                                 </div>
                                 <div class="form-group col-2 no-gutters">
@@ -267,7 +96,6 @@
                                                 type="text"
                                             />
                                         </div>
-                                        <span class="form-text text-muted" id="prod_variantHelpBlock">Variante specifica dell'articolo selezionato</span>
                                     </div>
                                 </div>
                                 <div class="form-group col-8 no-gutters">
@@ -287,7 +115,6 @@
                                                 type="text"
                                             />
                                         </div>
-                                        <span class="form-text text-muted" id="prod_nameHelpBlock">Descrizione del prodotto selezionato</span>
                                     </div>
                                 </div>
                             </div>
@@ -308,7 +135,7 @@
                             <label class="col-1 col-form-label">Date</label>
                             <div class="row col-11">
                                 <div class="form-group col no-gutters">
-                                    <label class="col-12 col-form-label" for="date_due">Data Scadenza [mm/dd/yyyy]</label>
+                                    <label class="col-12 col-form-label" for="dateDuePicker">Data Scadenza [mm/dd/yyyy]</label>
                                     <div class="col-12">
                                         <div class="input-group">
                                             <div class="input-group-prepend">
@@ -317,10 +144,10 @@
                                                 </div>
                                             </div>
                                             <input
-                                                aria-describedby="date_dueHelpBlock"
+                                                aria-describedby="dateDuePickerHelpBlock"
                                                 class="form-control"
-                                                id="date_due"
-                                                name="date_due"
+                                                id="dateDuePicker"
+                                                name="dateDuePicker"
                                                 readonly
                                                 required="required"
                                                 type="date"
@@ -330,7 +157,7 @@
                                 </div>
 
                                 <div class="form-group col no-gutters">
-                                    <label class="col-12 col-form-label" for="date_creation">Data Creazione [mm/dd/yyyy]</label>
+                                    <label class="col-12 col-form-label" for="dateCreationInput">Data Creazione [mm/dd/yyyy]</label>
                                     <div class="col-12">
                                         <div class="input-group">
                                             <div class="input-group-prepend">
@@ -339,10 +166,10 @@
                                                 </div>
                                             </div>
                                             <input
-                                                aria-describedby="date_creationHelpBlock"
+                                                aria-describedby="dateCreationInputHelpBlock"
                                                 class="form-control"
-                                                id="date_creation"
-                                                name="date_creation"
+                                                id="dateCreationInput"
+                                                name="dateCreationInput"
                                                 readonly
                                                 required="required"
                                                 type="text"
@@ -401,12 +228,6 @@
                             <span style="text-align: center; font-weight: 800; font-size: 1.5rem"
                                 >Location standard: <span id="productLocation" style="font-weight: 600; font-size: 1.8rem"></span
                             ></span>
-                        </div>
-
-                        <div class="row col-12 justify-content-center" style="padding-top: 10px">
-                            <span style="text-align: center; font-weight: 800; font-size: 1.5rem">Posizioni:  <span id="notFoundLocations" style="font-weight: 600; font-size: 1.8rem"></span
-                            ></span></span>
-                            <div class="request-table" id="dynamic-locations-table-container"></div>
                         </div>
 
                         <div class="row col-12 justify-content-center" style="padding-top: 10px">
